<resources>
    <string name="app_name">Bingo!</string>
    <string name="bingo_title">Bingo!</string>
    <string name="start">Start</string>
    <string name="join">Join</string>
    <string name="generate_code">Generate code</string>
    <string name="key_request">Enter key to join</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="join_request">Ask your friend to join with the code</string>
    <string name="continue_button">continue</string>
    <string name="test_1">1</string>
    <string name="test_null" />
    <string name="enter_name">Enter Name</string>
    <string name="please_wait">Loading</string>
    <string name="you_won">YOU WON</string>
    <string name="play_again">Play Again</string>
    <string name="you_lost">YOU LOST</string>
</resources>